# ArduinoSensorSystem

./: .gitignore  ArduinoSensorSystem.sln  LICENSE  README.md  package-lock.json
.github/workflows/: azure-static-web-apps-mango-grass-02598521e.yml  azure-static-web-apps-purple-forest-0cc3e4c1e.yml  build-validation.yml  dotnet.yml  node.js.yml
UnitTests/: TestController_Device.cs  TestController_Sensor.cs  TestController_SensorConfig.cs  TestController_SensorData.cs  TestController_User.cs  TestController_UserDevice.cs  UnitTestController.cs  UnitTestHelper.cs  UnitTests.csproj
arduino/: CMakeLists.txt  README.md  arduino.ino  common.hpp  config.hpp  sensor_definitions.hpp  serial_tcp_bridge copy.py  serial_tcp_bridge.py
arduino/simulator/: api_test.cpp  httplib.h  main.cpp  sim_client.cpp  sim_client.hpp  sim_http_client.hpp
arduino/src/: SF_LTEClient.hpp  client.cpp  client.hpp  dataClient.cpp  dataClient.hpp  device.cpp  device.hpp  device_driver.hpp  driver.hpp  http_client.hpp  lteClient.hpp  sensor.cpp  sensor.hpp  serialClient.hpp  sparkfun_tcp.cpp  sparkfun_tcp.hpp  sparkfun_udp.cpp  sparkfun_udp.hpp  time.cpp  time.hpp  time_client.hpp  util.cpp  util.hpp
arduino/src/drivers/: bme280_driver.hpp  example_driver.hpp
arduino/src/lib/: ArduinoJson.h  SparkFun_LTE_Shield.cpp  SparkFun_LTE_Shield.h
backend-app/: Program.cs  WeatherForecast.cs  appsettings.json  backend-app.csproj
backend-app/Controllers/: DeviceController.cs  DeviceSensorsController.cs  (+13 more)
frontend-app/: package-lock.json  package.json
hecate-app/: package-lock.json  package.json
(+154 files in other folders)
